# ft_malloc

./: .gitignore  CMakeLists.txt  Makefile  main
ceedling/: CMakeLists.txt  project.yml
ceedling/test/: test_chunk_create.c  test_chunk_fusion.c  test_chunk_split.c  test_zone_create.c
include/: calloc.h  chunk.h  def.h  display.h  free.h  malloc.h  memory.h  realloc.h  utils.h  zone.h
src/: calloc.c  chunk.c  display.c  free.c  main.c  malloc.c  memory.c  realloc.c  utils.c  zone.c
test/: CMakeLists.txt  test_chunk_create.c  test_chunk_fusion.c  test_chunk_gap.c  test_chunk_init.c  test_chunk_split.c  test_free_basic.c  test_malloc_chunk_creation.c  test_malloc_zone_creation.c  test_realloc.c  test_zone_create.c  test_zone_unmap.c
